Minor fix with vote-btn spacing

--- a/src/app/pages/vote/vote.page.scss
+++ b/src/app/pages/vote/vote.page.scss
@@ -37,7 +37,7 @@
   background: hsl(225, 22%, 96%);
   min-height: 100%;
   padding-top: 13%;
-  padding-bottom: 13%;
+  padding-bottom: 15%;
 
   .vote-btn {
     position: fixed;
